--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
             <title>Indian Food</title>
+            <link type="text/css" rel="stylesheet" href="styles.css">
             <header>
                 <h1>INDIAN CURRIES RECEPIES</h1>
             </header>
@@ -10,7 +11,7 @@
 <body>
     <main>
         <p>Indian Kitchen is filled with regional Indian curries. With recipes to fit into your lifestyle whether 
-            you’re short of time and want a quick meal, or have friends and family coming over and want to cook a feast.</p>
+            you are short of time and want a quick meal, or have friends and family coming over and want to cook a feast.</p>
         <p>The great Indian 'kari', which stems from the word for sauce in Tamil, is known to have originated sometime 
             during the ancient Indus civilization. Since then it has travelled beyond boundaries and created many fans across
             the globe.</p>
@@ -42,12 +43,12 @@
 
 <h1><a name = "Rajma"> Kashmiri Rajma Masala</a></h1>
 <img src="images\Kashmiri-Rajma-Masala.jpg">
-<p>Ingredients : 2 tinned red kidney bean cans drained and rinsed, 3 tbsp vegetable oil, 4 black cardamom pods, 
+<p class = "borderparagraph" id = "curryname">Ingredients: 2 tinned red kidney bean cans drained and rinsed, 3 tbsp vegetable oil, 4 black cardamom pods, 
     2 inch cinnamon stick, 130 gms white onion finely chopped, 2 tsp ginger garlic paste (5 garlic cloves and 1” ginger
      blended with a splash of water), 2 heaped tbsp tomato puree, 2 tsp ground fennel powder, 2 tsp dried ginger powder,
      ½ tsp mild chilli powder, Pinch of asafoetida, 300 mls water, Salt to taste, Handful coriander to garnish</p>
-<p>Method : 
-    <ul>
+<p id = "currydesc">Method : 
+    <ul id = "currydesc">
         <li>Heat oil in a heavy bottom large non stick sauce pan. Add the black cardamom pods and cinnamon stick letting
          them frying for a minute over low heat. Add the ginger garlic paste and fry for 30 seconds as the raw flavours
           cook through.</li>
@@ -59,15 +60,16 @@
         Garnish with fresh coriander and serve with rice and papad.</li>
     </ul>
 </p>
-<h1><a name = "Dal"></a>Punjabi Dal Makhani</h1>>
+<h1><a name = "Dal"></a>Punjabi Dal Makhani</h1>
 <img src="images\Black-Dal-Makhani.jpg">
-<p>Ingredients: 280gms whole urad dal (black lentil), 60gms red kidney beans, 1.5 litres water, 3 tbsp vegetable oil, 
-    Pinch of asafoetida, 1 green chilli slit lengthwise, 1 tsp cumin seeds coarsely ground, 10 cloves of garlic finely
-    chopped, 210gms white onion finely chopped, 220gms tomatoes finely chopped, 3 tbsp tomato puree, 1 inch piece of
-    ginger finely chopped, 1 tsp mild chilli powder, ½ tsp garam masala powder, 2 tbsp butter, 60mls single cream, 1 tbsp 
-    chopped coriander for garnish, ½ “ginger slivers for garnish</p>
-<p>Method: 
-    <ul>
+<p class = "borderparagraph" id = "curryname">Ingredients: 280gms whole urad dal (black lentil), 60gms red kidney beans, 
+    1.5 litres water, 3 tbsp vegetable oil, Pinch of asafoetida, 1 green chilli slit lengthwise, 1 tsp 
+    cumin seeds coarsely ground, 10 cloves of garlic finely chopped, 210gms white onion finely chopped, 220gms
+    tomatoes finely chopped, 3 tbsp tomato puree, 1 inch piece of ginger finely chopped, 1 tsp mild chilli powder,
+    ½ tsp garam masala powder, 2 tbsp butter, 60mls single cream, 1 tbsp chopped coriander for garnish, ½ “ginger 
+    slivers for garnish</p>
+<p id = "currydesc">Method: 
+    <ul id = "currydesc">
         <li>Soak the black lentils and kidney beans overnight in a bowl in plenty of water.</li>
         <li>In a large heavy bottom sauce pan add the black lentil and kidney beans along with the water and salt. 
             Bring to a boil and simmer on a low heat for an hour. Stir a few times and scarp of the foam from the top. 
@@ -93,11 +95,11 @@
     
 <h1><a name = "Palakdal">Palak Dal</a></h1>
  <img src="images\Palak-Dal.jpg">
- <p>Ingredients: 250gms moong dal (Skinned and split mung beans), 100gms spinach leaves roughly chopped, 900mls water,
+<p class = "borderparagraph" id = "curryname">Ingredients: 250gms moong dal (Skinned and split mung beans), 100gms spinach leaves roughly chopped, 900mls water,
     1 tsp turmeric powder, Pinch of asafoetida, 3 tbsp vegetable oil or ghee, 1 tsp cumin seeds, 6 garlic cloves finely
     chopped, 1 inch ginger finely chopped, 2 green chillies finely chopped, Salt to taste, Juice of half lemon</p>
-<p>Method:
-    <ul>
+<p id = "currydesc">Method:
+    <ul id = "currydesc">
         <li>In a heavy bottom sauce pan cook the dal along with the water, turmeric and asafoetida for 25-30 minutes
             over a medium heat. Cool slightly and mash the dal roughly with a potato masher or back of a large spoon.</li>
         <li>In a large non stick sauce pan heat the oil or ghee over a medium flame. Add the cumin seeds followed by 
